src/objects/Ven_Round__c.object
<CustomObject>
    <fields>
        <fullName>Ven_Account__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <inlineHelpText>Hier handelt es sich um die Firma (Account) an der die Investoren beteiligt sind.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rounds</relationshipLabel>
        <relationshipName>Rounds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ven_Aktiv__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gibt an ob eine Runde aktiv ist oder nicht! Wird automatisch gesetzt.</description>
        <inlineHelpText>Gibt an ob eine Runde aktiv ist oder nicht! Wird automatisch gesetzt.</inlineHelpText>
        <label>Aktiv</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Category__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <inlineHelpText>Hier wird die Category der Firma (Accounts) eingetragen an der die Investoren beteiligt sind.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ven_Founders_Equity_Share__c</fullName>
        <label>dontUse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_Founders_Share__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dontUse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_G_ltig_ab__c</fullName>
        <description>Hier wird die Gültigkeit des Cap Tables angegeben.</description>
        <inlineHelpText>Bitte das Datum angeben ab wann der Cap Table gültig ist.</inlineHelpText>
        <label>Gültig ab</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_Round_Number__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <inlineHelpText>Hier wird die Beteiligungsrunde erfasst.</inlineHelpText>
        <label>Round Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_SV_Equity_Share__c</fullName>
        <label>dontUse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_SV_Share__c</fullName>
        <description>Formelfeld was die Beteiligung von SV in % ausgibt.</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hier werden die Anteile von Seven Ventures an den Account in % angezeigt.</inlineHelpText>
        <label>dontUse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ven_Total_Share_Value__c</fullName>
        <formula>Ven_all_Shares__c  *  Ven_Wert_pro_Anteil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Share Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Wert_Founder__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dontUse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Wert_SV__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dontUse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_Wert_pro_Anteil__c</fullName>
        <description>Es wird der Wert pro Anteil angegeben.</description>
        <inlineHelpText>Bitte den Wert pro Anteil angeben!</inlineHelpText>
        <label>Wert pro Anteil</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ven_all_Shares__c</fullName>
        <description>Das Feld gehört zum Seven Ventures Objekt &quot;Cap Table&quot;, was die Beteiligung von Seven Ventures oder auch anderen Shareholder anzeigt.</description>
        <inlineHelpText>Hier wird die Summe alles Shares die im Umlauf sind automatisch addiert.</inlineHelpText>
        <label>#Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Round</label>
    <nameField>
        <displayFormat>RD-{0000000}</displayFormat>
        <label>Round-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rounds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>